Criação do Header e esboço da Nav 1.1

--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
     <script src='main.js'></script>
 </head>
 <body>
-    
+    <header>
+        <div class="titulo">
+            <h1>MANUAL DA PROGRAMAÇÃO</h1>
+        </div>
+        <nav>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+            <li>PHP</li>
+            <li>Git/GitHub</li>
+            <li>MySQL</li>
+        </nav>
+        
+    </header>
 </body>
 </html>
