Substituições de botões e mudanças de hover 1.1.2

--- a/index.html
+++ b/index.html
@@ -14,12 +14,24 @@
             <h1>MANUAL DA PROGRAMAÇÃO</h1>
         </div>
         <nav>
-            <li>HTML</li>
-            <li>CSS</li>
-            <li>JavaScript</li>
-            <li>PHP</li>
-            <li>Git/GitHub</li>
-            <li>MySQL</li>
+            <button>
+                <li>HTML</li>
+            </button>
+            <button>
+                <li>CSS</li>
+            </button>
+            <button>
+                <li>JavaScript</li>
+            </button>
+            <button>
+                <li>PHP</li>
+            </button>
+            <button>
+                <li>Git/GitHub</li>
+            </button>
+            <button>
+                <li>MySQL</li>
+            </button>
         </nav>
         
     </header>
