--- a/index.html
+++ b/index.html
@@ -13,27 +13,41 @@
         <div class="titulo">
             <h1>MANUAL DA PROGRAMAÇÃO</h1>
         </div>
-        <nav>
-            <button>
+        <nav  class="tab-buttons">
+            <button class="tab-btn" content-id="HTML">
                 <li>HTML</li>
             </button>
-            <button>
+            <button class="tab-btn" content-id="CSS">
                 <li>CSS</li>
             </button>
-            <button>
+            <button class="tab-btn" content-id="JS">
                 <li>JavaScript</li>
             </button>
-            <button>
+            <button class="tab-btn" content-id="PHP">
                 <li>PHP</li>
             </button>
-            <button>
+            <button class="tab-btn" content-id="GIT">
                 <li>Git/GitHub</li>
             </button>
-            <button>
+            <button class="tab-btn" content-id="SQL">
                 <li>MySQL</li>
             </button>
         </nav>
-        
     </header>
+
+    <main class="tab-contents">
+        <section class="content show" id="HTML">
+            <div class="infos">
+                <h1>HTML</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam repellat vero repudiandae dolore cum eaque possimus minus quas deleniti voluptatem temporibus enim quod delectus, porro, numquam quaerat perspiciatis deserunt non.</p>
+            </div>
+        </section>
+        <section class="content" id="CSS">
+            <div class="infos">
+                <h1>CSS</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam repellat vero repudiandae dolore cum eaque possimus minus quas deleniti voluptatem temporibus enim quod delectus, porro, numquam quaerat perspiciatis deserunt non.</p>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
