Edição dos conteúdos (JS e GIT) 1.4

--- a/index.html
+++ b/index.html
@@ -43,42 +43,72 @@
     
 
         <main class="tab-contents">
+
+            <!-- HTML -->
             <div class="content" id="HTML">
                 <div class="infos">
                     <h1>HTML</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam repellat vero repudiandae dolore cum eaque possimus minus quas deleniti voluptatem temporibus enim quod delectus, porro, numquam quaerat perspiciatis deserunt non.</p>
+                    <p id="htmlinfo">Essa parte não está pronta, dê uma olhada nas outras seções.</p>
                 </div>
             </div>
+
+            <!-- CSS -->
             <div class="content" id="CSS">
                 <div class="infos">
                     <h1>CSS</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam repellat vero repudiandae dolore cum eaque possimus minus quas deleniti voluptatem temporibus enim quod delectus, porro, numquam quaerat perspiciatis deserunt non.</p>
+                    <p id="cssinfo">Essa parte não está pronta, dê uma olhada nas outras seções.</p>
                 </div>
             </div>
+
+            <!-- JavaScript -->
             <div class="content" id="JS">
+                <nav id="nav">
+                    <li><a href="#concept1">Tópico 1</a></li>
+                    <li><a href="#concept2">Tópico 2</a></li>
+                    <li>Tópico 3</li>
+                    <li>Tópico 4</li>
+                    <li>Tópico 5</li>
+                </nav>
                 <div class="infos">
-                    <h1>JS</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam repellat vero repudiandae dolore cum eaque possimus minus quas deleniti voluptatem temporibus enim quod delectus, porro, numquam quaerat perspiciatis deserunt non.</p>
+                    <h1 id="concept1">JS</h1>
+                    <p>.</p>
+                    <h1 id="concept2">Oi</h1>
                 </div>
             </div>
+
+            <!-- PHP -->
             <div class="content" id="PHP">
                 <div class="infos">
                     <h1>PHP</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam repellat vero repudiandae dolore cum eaque possimus minus quas deleniti voluptatem temporibus enim quod delectus, porro, numquam quaerat perspiciatis deserunt non.</p>
+                    <p>Essa parte não está pronta, dê uma olhada nas outras seções.</p>
                 </div>
             </div>
+
+            <!-- Git/GitHub -->
             <div class="content" id="GIT">
+                <nav id="nav">
+                    <li><a href="#conceptA">Tópico A</a></li>
+                    <li><a href="#conceptB">Tópico B</a></li>
+                    <li>Tópico C</li>
+                    <li>Tópico D</li>
+                    <li>Tópico E</li>
+                </nav>
                 <div class="infos">
-                    <h1>GIT</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam repellat vero repudiandae dolore cum eaque possimus minus quas deleniti voluptatem temporibus enim quod delectus, porro, numquam quaerat perspiciatis deserunt non.</p>
+                    <h1 id="conceptA">GIT</h1>
+                    <p>.</p>
+                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+                    <h1 id="conceptB"> Eae </h1>
                 </div>
             </div>
+
+            <!-- MySQL -->
             <div class="content" id="SQL">
                 <div class="infos">
                     <h1>SQL</h1>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Totam repellat vero repudiandae dolore cum eaque possimus minus quas deleniti voluptatem temporibus enim quod delectus, porro, numquam quaerat perspiciatis deserunt non.</p>
+                    <p>Essa parte não está pronta, dê uma olhada nas outras seções.</p>
                 </div>
             </div>
+
         </main>
     </div>
 
