Criação do menu lateral 1.7

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     
 
         <main class="tab-contents">
-
+            <button id="nav-toggle" class="nav-toggle">☰</button>
             <!-- HTML -->
             <div class="content" id="HTML">
                 <div class="infos">
@@ -62,7 +62,7 @@
 
             <!-- JavaScript -->
             <div class="content" id="JS">
-                <nav id="nav">
+                <nav id="nav-js" class="tab-nav">
                     <li><a href="#concept1">Tópico 1</a></li>
                     <li><a href="#concept2">Tópico 2</a></li>
                     <li>Tópico 3</li>
@@ -87,7 +87,7 @@
 
             <!-- Git/GitHub -->
             <div class="content" id="GIT">
-                <nav id="nav">
+                <nav id="nav-git" class="tab-nav">
                     <li><a href="#conceptA">Tópico A</a></li>
                     <li><a href="#conceptB">Tópico B</a></li>
                     <li>Tópico C</li>
