Adição do Ícone 1.8

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
     <title>Manual de Programação<object data="" type=""></object></title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel="shortcut icon" href="img/manualicon.png" type="image/x-icon">
+
     
 </head>
 <body>
     <div id="container">
         <header>
             <div class="titulo">
+                <img src="img/manualicon.png" alt="Ícone de Manual">
                 <h1>MANUAL DA PROGRAMAÇÃO</h1>
             </div>
             <div class="tab-buttons">
