Arrumando a parte das inforamções 1.9

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             </div>
             <div class="tab-buttons">
                 <button class="tab-btn active" content-id="HTML">
-                    <li class="active">HTML</li>
+                    <li>HTML</li>
                 </button>
                 <button class="tab-btn" content-id="CSS">
                     <li>CSS</li>
@@ -66,17 +66,15 @@
             <!-- JavaScript -->
             <div class="content" id="JS">
                 <nav id="nav-js" class="tab-nav">
-                    <li><a href="#concept1">Tópico 1</a></li>
-                    <li><a href="#concept2">Tópico 2</a></li>
-                    <li>Tópico 3</li>
-                    <li>Tópico 4</li>
-                    <li>Tópico 5</li>
+
+                    <li><a href="#concept1js">JavaScript</a></li>
+
                 </nav>
                 <div class="infos">
-                    <h1 id="concept1">JS</h1>
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <p>.</p>
-                    <h1 id="concept2">Oi</h1>
+
+                    <h1 id="concept1js">JavaScript</h1>
+                    <h1 id="concept2js">Oi</h1>
+
                 </div>
             </div>
 
@@ -91,32 +89,15 @@
             <!-- Git/GitHub -->
             <div class="content" id="GIT">
                 <nav id="nav-git" class="tab-nav">
-                    <li><a href="#conceptA">Tópico A</a></li>
-                    <li><a href="#conceptB">Tópico B</a></li>
-                    <li>Tópico C</li>
-                    <li>Tópico D</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
-                    <li>Tópico E</li>
+
+                    <li><a href="#concept1git">GIT</a></li>
+
                 </nav>
                 <div class="infos">
-                    <h1 id="conceptA">GIT</h1>
-                    <p>.</p>
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-                    <h1 id="conceptB"> Eae </h1>
-                    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+                    <h1 id="concept1git">GIT - GITHUB</h1>
+                    <p>Olá, seja bem vindo ao</p>
+
                 </div>
             </div>
 
