Introdução ao manual do Git 2.0

--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@
                 <div class="infos">
 
                     <h1 id="concept1git">GIT - GITHUB</h1>
-                    <p>Olá, seja bem vindo ao</p>
+                    <p>
+                        Olá, seja bem vindo à seção GIT - GITHUB. Neste espaço você encontrará informações e dicas sobre como utilizar o Git e o GitHub para versionamento de código, colaboração em projetos e controle de versões. Explore os tópicos ao lado para começar!
+                    </p>
 
                 </div>
             </div>
