--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Manual de Programação<object data="" type=""></object></title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='Styles/git.css'>
     <link rel="shortcut icon" href="img/manualicon.png" type="image/x-icon">
 
     
@@ -90,15 +91,43 @@
             <div class="content" id="GIT">
                 <nav id="nav-git" class="tab-nav">
 
-                    <li><a href="#concept1git">GIT</a></li>
+                    <li><a href="#concept1git">GIT - GITHUB</a></li>
+                    <li><a href="#concept2git">Primeiros Passos</a></li>
 
                 </nav>
-                <div class="infos">
+                <div class="infos" id="gitinf">
 
                     <h1 id="concept1git">GIT - GITHUB</h1>
                     <p>
                         Olá, seja bem vindo à seção GIT - GITHUB. Neste espaço você encontrará informações e dicas sobre como utilizar o Git e o GitHub para versionamento de código, colaboração em projetos e controle de versões. Explore os tópicos ao lado para começar!
                     </p>
+                    <img src="img/git e github.png" alt="Git e GitHub" id="gitimg">
+                    <h2 id="concept2git">Primeiros Passos:</h2>
+                    <p>
+                        Antes de você começar a conhecer os "códigos" do Git, você precisa saber a parte da criação de uma conta no GitHub 
+                        e como deve ser feita a instalação.
+                    </p>
+                        <br><br>
+                        <h3><strong>1. Criando uma conta no GitHub:</strong></h3>
+                        <ul>
+                            <li>Acesse o site <a href="https://github.com/" target="_blank">github.com</a> e clique em "Sign up".</li>
+                            <li>Preencha seus dados (e-mail, senha, nome de usuário) e siga as instruções para confirmar sua conta.</li>
+                        </ul>
+                        <br>
+                        <h3><strong>2. Instalando o Git:</strong></h3>
+                        <ul>
+                            <li>
+                                <b>Windows:</b> Baixe o instalador em <a href="https://git-scm.com/download/win" target="_blank">git-scm.com</a> e siga o assistente de instalação.
+                            </li>
+                            <li>
+                                <b>Mac:</b> Use o Homebrew com o comando <code>brew install git</code> ou baixe em <a href="https://git-scm.com/download/mac" target="_blank">git-scm.com</a>.
+                            </li>
+                            <li>
+                                <b>Linux:</b> Use o gerenciador de pacotes, por exemplo: <code>sudo apt-get install git</code> (Debian/Ubuntu).
+                            </li>
+                        </ul>
+                        <p>Após instalar, abra o terminal e digite <code>git --version</code> para verificar se a instalação foi bem-sucedida.</p>
+
 
                 </div>
             </div>
